oxidite-macros/tests/ui/fail_unnamed_struct.rs
#[derive(oxidite_macros::Model)]
struct Bad(i64);

fn main() {}
